# smg-pyorbslam2

./: .gitignore  CMakeLists.txt  LICENCE  MANIFEST.in  README.md  _pyorbslam.cpp  environment-bad.yml  environment.yml  pyorbslam.cpp  pyorbslam.pyi  pyorbslam2.cpp  pyorbslam2.pyi  pyproject.toml  setup.py
cmake/: LinkORBSLAM.cmake  LinkOpenCV.cmake  LinkSpaint.cmake  SetCUDALibTarget.cmake  UseEigen.cmake  UseGLEW.cmake  UseORBSLAM.cmake  UseORBSLAM2.cmake  UseOpenCV.cmake  UseSpaint.cmake
pyorbslam/: __init__.py  monocular_tracker.py
pyorbslam/python/: monocular_tracker.py  rgbd_tracker.py
python/sandbox/: main.py
sandbox/: main.py
smg/pyorbslam/: __init__.py
smg/pyorbslam/python/: monocular_tracker.py  rgbd_tracker.py
smg/pyorbslam2/: __init__.py
smg/pyorbslam2/python/: monocular_tracker.py  rgbd_tracker.py
